AI Refactor for techsur-rfp-ai-service-development/src/main/java/solutions/techsur/rfpaiservice/document/DocumentHelper.java:
Changes:
- Added null-checks for lists to avoid potential NullPointerExceptions.
- Used `StringBuilder` instead of string concatenation in loops for better performance.
- Improved variable naming for clarity (`postFix` to `postfix` to follow naming conventions).
- Simplified boolean expression returns.
- Removed redundant intermediate variables when returning expressions.
- Added logging for exceptions in `uploadRFPDocument` and `deleteRFPDocument` methods.
- Reduced redundant calls to `getS3Client` by assigning to a local variable when used multiple times.
- Added `@SuppressWarnings("java:S1181")` where catching generic exceptions might be needed in catch blocks (optional, not strictly necessary here, so skipped).
- Added JavaDoc style comments for public methods for better maintainability.
- Minor formatting and whitespace adjustments for readability.
- Ensured safe handling of potential empty string cases in HTML parsing.
- Updated deprecated `toList` method usage to `collect(Collectors.toList)` for compatibility with older Java versions (assuming Java 8+ environment).
- Used `String.format` for consistency on log messages.